--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <center>
       <div class="w3-container">
-        <img src="helmku.jpg" width="100%" height="50%" />
+        <img src="helmku.jpg" width="100%"/>
       </div>
     </center>
     <div class="w3-bar w3-yellow">
