--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button class="w3-bar-item w3-button" onclick="openKota('about')">ABOUT</button>
     </div>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <div id="Home" class="w3-container kota w3-floating" style="display: block;">
+    <div id="home" class="w3-container kota w3-floating" style="display: block;">
       <center>
         <br>
         <img src="welcome.jpg" width="100%"     
@@ -67,11 +67,20 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <div id="about" class="w3-container kota w3-animate-Opacity" style="display:none">
           <center>
-            <h1>NIM : 10122061</h1>
-            <br>
-            <h1>NAMA : TRYANA ADIGUMILAR</h1>
-            <br>
-            <h1>KELAS : IF-2</h1>
+            <h2>ABOUT ME</h2>
+            <hr>
+            <style>
+              .avatar {
+                vertical-align: middle;
+                width: 150px;
+                height: 150px;
+                border-radius: 50%;
+              }
+            </style>
+            <img src="AKU.png" alt="Avatar" class="avatar">
+            <p>
+              <b>NAMA: TRYANA ADIGUMILAR <br> NIM:<i> 10122061</i></b> <br><b> KELAS: IF2 </b><br><b>Teknik Informatika</b>
+            </p>
           </center>
     </div>
     <script>
