terakhiran ini mh

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="w3.css" />
   <body>
     <center>
-      <div class="w3-container">
+      <div class="w3-grey">
         <img src="helmku3.jpg" width="100%"/>
       </div>
     </center>
@@ -18,10 +18,10 @@
     <button class="w3-bar-item w3-button" onclick="openKota('about')">ABOUT</button>
     </div>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <div id="home" class="w3-container kota w3-floating" style="display: block;">
+    <div id="home" class="w3-container kota w3-animate-Opacity" style="display: block;">
       <center>
         <br>
-        <img src="welcome.jpg" width="100%"     
+        <img src="welcome.jpg" width="90%"     
       </center>
     </div>  
       <div id="arai" class="w3-container kota w3-animate-Top" style="display:none">
@@ -65,7 +65,7 @@
           </center>
       </div>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <div id="about" class="w3-container kota w3-animate-Opacity" style="display:none">
+      <div id="about" class="w3-container kota w3-animate-Fading" style="display:none">
           <center>
             <h2>ABOUT ME</h2>
             <hr>
